# clouddrive-rpc

./: .gitignore  Cargo.toml  README_en.md
src/: launch.rs  lib.rs
src/conf/: conf.rs
src/datasrc/: mod.rs  prototype.rs
src/datasrc/message/: message.rs
src/datasrc/onedrive/: login.rs  mod.rs  onedrive.rs
src/datasrc/webdav/: access.rs  mod.rs  webdav.rs
src/rpc/: callback.rs  channel.rs  context.rs  manager.rs  mod.rs
