[package]
name = "clouddrive-rpc"
version = "1.0.0"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
onedrive-api = "0.9"
kv = "0.24" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9"
hyperdav = { git = "https://gitlab.com/Gahr/hyperdav", branch = "master" }
tracing = "0.1"
tracing-subscriber = "*"
tracing-tracy = "*"
argparse = "0.2"
once_cell = "1.13"

[dependencies.tokio]
version = "1.19"
features = [
    "full"
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "rpc"
path = "src/launch.rs"
